--- a/index.html
+++ b/index.html
@@ -3,22 +3,24 @@
 <head>
 <style>
 body {
-  background-image: url('https://augu9833.s3.amazonaws.com/BecomeDevopsbg.png');
-  background-repeat: no-repeat;
-  background-attachment: fixed;  
-  background-size: cover;
+  background-color: lightblue;
+}
+
+h1 {
+  color: white;
+  text-align: center;
+}
+
+p {
+  font-family: verdana;
+  font-size: 20px;
 }
 </style>
 </head>
 <body>
 
-<h2 style="background-color:black;color:white;">Become Devops</h2>
-
-<h2 style="background-color:black;color:white;">This website was designed to demonstrate an example in the Devops Course.</h2>
-
-
-
-
+<h1>ONDEMANDLABS</h1>
+<p>This is a AWS Session.</p>
 
 </body>
 </html>
